pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-using-pvc
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo $(date) >> /mnt/data/log.txt; sleep 5; done"]
      volumeMounts:
        - mountPath: /mnt/data
          name: storage
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: example-pvc
